Modified build.gradle as per gradle:3.3.1

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,6 @@ android {
 
 dependencies {
     def reactNativeVersion = project.hasProperty('reactNativeVersion') ? project.reactNativeVersion : "+"
-		
-    compile "com.facebook.react:react-native:$reactNativeVersion" //Previously +
+    
+    implementation "com.facebook.react:react-native:$reactNativeVersion" //Previously +
 }
